// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons As a link 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <a
      class="Button__WrapperButton-sc-1omxup2-0 kpKTNa PrimaryButton-qz78sb-0 FEXbH"
      href="/"
    >
      Create project
    </a>
  </div>
</div>
`;

exports[`Storyshots Buttons Button 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons DangerButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 kpKTNa DangerButton-sc-1220u5k-0 hUeuBm"
    >
      Delete project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons PrimaryButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 kpKTNa PrimaryButton-qz78sb-0 FEXbH"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons QuietButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 kpKTNa QuietButton-sc-1l5k8i4-0 dgPQkb"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hOMAfu PrimaryButton-qz78sb-0 kbLMud"
      disabled=""
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons Set to full width 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 gDovmz PrimaryButton-qz78sb-0 FEXbH"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons With a selected Icon 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
    >
      <svg
        aria-hidden="true"
        class="Icon-fc7twp-0 eawHFc"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="1.14285714em"
        icon="add"
        mr="half"
        viewBox="0 0 24 24"
        width="1.14285714em"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
    >
      Create project
      <svg
        aria-hidden="true"
        class="Icon-fc7twp-0 fedCXx"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="1.14285714em"
        icon="add"
        ml="half"
        viewBox="0 0 24 24"
        width="1.14285714em"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons With a selected size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 doZlSP"
    >
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 kpKTNa"
    >
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hlItJn"
    >
      Create project
    </button>
  </div>
</div>
`;
